--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -2,3 +2,8 @@
 @import "./variable.scss";
 @import "./materialize-custom.scss";
 @import "./toast.scss";
+
+.px1 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
